--- a/src/footer/components/footer.htm
+++ b/src/footer/components/footer.htm
@@ -19,8 +19,8 @@
       <p>Node.js server code <a href="https://github.com/feross/standard" target="_blank" rel="noopener noreferrer"><img class="js-standard-style" src="https://cdn.rawgit.com/feross/standard/master/badge.svg" alt="JS Standard style"></a>&nbsp;compliant</p>
       <p><i class="icon-git"></i>&nbsp;Deployed from <a href="https://github.com/ouq77/portfolio-web/tree/portfolio-web-ng2-heroku" target="_blank" rel="noopener noreferrer" class="js_track_link_click">this repo</a></p>
       <p><i class="icon-file-code"></i>&nbsp;Docs <a href="/docs/index.html" target="_blank" rel="noopener noreferrer" class="js_track_link_click">hosted here</a></p>
-      <p><a href="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2" target="_blank" rel="noopener noreferrer" title="dependencies status"><img src="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2/status.svg"/></a></p>
-      <p><a href="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2?type=dev" target="_blank" rel="noopener noreferrer" title="devDependencies status"><img src="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2/dev-status.svg"/></a></p>
+      <p><a href="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2" target="_blank" rel="noopener noreferrer" title="dependencies status"><img src="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2/status.svg" alt="dependencies status"/></a></p>
+      <p><a href="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2?type=dev" target="_blank" rel="noopener noreferrer" title="devDependencies status"><img src="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2/dev-status.svg" alt="devDependencies status"/></a></p>
     </div>
   </div>
   <div class="last-modified">
