--- a/src/header/components/header.htm
+++ b/src/header/components/header.htm
@@ -26,7 +26,7 @@
         <div class="navbar navbar-inverse navbar-static-top">
           <div class="container">
             <div id="mss" class="navbar-header">
-              <button id="js_menu_button" type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <button id="js_menu_button" type="button" aria-label="Nav toggle button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">Menu</a>
