--- a/app/docs/styles/compodoc.css
+++ b/app/docs/styles/compodoc.css
@@ -53,9 +53,13 @@ h2 {
 }
 h3 {
     font-size: 20px;
+    font-weight: bold;
 }
 h4, h5 {
     font-size: 18px;
+}
+h6 {
+    font-size: 16px;
 }
 
 /**
@@ -283,6 +287,10 @@ h4, h5 {
     padding-left: 20px;
 }
 
+.menu ul.list li.for-chapter {
+    padding-left: 20px;
+}
+
 .menu ul.list li.chapter .simple {
     padding: 10px 15px;
     position: relative;
@@ -341,6 +349,9 @@ h4, h5 {
 
 .menu-toggler {
     cursor: pointer;
+}
+.menu-toggler .fa-angle-down, .menu-toggler .fa-angle-up {
+    cursor: pointer;
     padding: 5px 10px;
     font-size: 16px;
     position: absolute;
@@ -381,6 +392,10 @@ h4, h5 {
     position: absolute;
     right: 0;
     margin: 10px;
+}
+
+.content ul.nav {
+    padding-left: 0;
 }
 
 .xs-menu {
@@ -484,26 +499,16 @@ code {
   font-style: normal;
 }
 
-.hljs-line-numbers {
-    text-align: right;
-    border-right: 1px solid #ccc;
-    color: #999;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
 .jsdoc-params {
     list-style: square;
-    padding-left: 20px;
     margin-top: 10px;
     margin-bottom: 0 !important;
 }
 .jsdoc-params li {
     padding-bottom: 10px;
+}
+.jsdoc-example-ul ul {
+    padding-left: 20px;
 }
 
 i {
@@ -533,6 +538,9 @@ i {
 }
 thead.coverage-header >tr>td, thead.coverage-header>tr>th {
     border-bottom-width: 0;
+}
+th[role=columnheader].statements:not(.no-sort):after {
+    margin-left: 10px;
 }
 .coverage-count {
     color: grey;
@@ -571,9 +579,19 @@ thead.coverage-header >tr>td, thead.coverage-header>tr>th {
 
 .content ul {
     list-style: disc;
-    padding-left: 2em;
     margin-top: 0;
+    padding-left: 20px;
     margin-bottom: 16px;
+}
+.content ul.list-group {
+    padding-left: 0;
+}
+.content ul.list-group li.list-group-item a {
+    display: inline-block;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .content ul ul {
     list-style-type: circle;
@@ -612,4 +630,162 @@ thead.coverage-header >tr>td, thead.coverage-header>tr>th {
 }
 .modifier-icon.method .fa-lock {
     margin-right: 0;
+}
+.modifier-icon.fa-reset {
+    margin-right: 0;
+}
+
+/* Routes graph */
+
+.node text {
+    font-size: 12px;
+}
+
+.node .icon {
+    font-size: 15px;
+    cursor: default;
+}
+.node .icon.has-children {
+    cursor: pointer;
+}
+
+path.link {
+    fill: none;
+    stroke: #9ecae1;
+    stroke-width: 1.5px;
+}
+
+#body-routes a {
+    text-decoration: underline;
+}
+#body-routes svg {
+    overflow: visible;
+}
+
+/* Miscellaneous */
+
+.content.miscellaneous h2 {
+    margin-bottom: 20px;
+}
+.content.miscellaneous h4 {
+    padding-top: 20px;
+}
+
+/* highlight line */
+.line-highlight {
+    background: linear-gradient(to right, hsla(0, 0%, 100%,.1) 70%, hsla(24, 20%, 50%,0));
+}
+
+#tree-container {
+    width: 100%;
+    height: 100%;
+}
+
+#tree {
+    position: relative;
+}
+.tree-legend {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    border: 1px solid #ddd;
+    padding: 5px 10px;
+}
+.tree-legend .title {
+    margin-bottom: 8px;
+}
+.tree-legend .color {
+    width: 20px;
+    height: 12px;
+    display: inline-block;
+    margin-right: 5px;
+}
+.tree-legend .htmlelement {
+    background: #97c2fc;
+}
+.tree-legend .component {
+    background: #fb7e81;
+}
+.tree-legend .directive {
+    background: #FF9800;
+}
+
+#module-graph-svg {
+    width: 100%;
+    height: 250px;
+}
+
+#module-graph-svg svg {
+    width: 100%;
+    height: 100%;
+}
+
+table.params {
+  width: 100%;
+  margin: 10px 0;
+  border-spacing: 0;
+  border: 0;
+  border-collapse: collapse;
+}
+
+table.params thead {
+  background: #f5f5f5;
+  color: #525252;
+}
+
+table.params td {
+  padding: 4px;
+  border: solid 1px #ddd;
+}
+
+table.params td p {
+  margin: 0;
+}
+
+.img-responsive {
+    display: inline-block;
+}
+
+.index-table h6 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+ul.index-list {
+    list-style: none;
+    padding: 0;
+    column-gap: 20px;
+    column-count: 3;
+    line-height: 25px;
+    margin-bottom: 0;
+}
+
+.no-graph {
+    text-align: center;
+    height: 175px;
+    line-height: 175px;
+}
+
+.name a {
+    display: none;
+    color: #6e6e6e;
+    margin-left: 5px;
+}
+.name:hover a {
+    display: inline-block;
+}
+
+.accessor b {
+    color: #808080;
+    margin-right: 8px;
+    font-weight: normal;
+}
+
+.module-graph-container {
+    position: relative;
+}
+.module-graph-fullscreen-btn {
+    position: absolute;
+    right: 5px;
+    top: 0;
+    cursor: pointer;
 }
