--- a/app/docs/styles/style.css
+++ b/app/docs/styles/style.css
@@ -1,6 +1,7 @@
 @import "./reset.css";
 @import "./bootstrap.min.css";
 @import "./bootstrap-card.css";
-@import "./monokai-sublime.css";
+@import "./prism.css";
 @import "./font-awesome.min.css";
 @import "./compodoc.css";
+@import "./tablesort.css";
