Lighthouse tweaks. Compodoc rendering updates.

--- a/src/education/components/education.htm
+++ b/src/education/components/education.htm
@@ -16,7 +16,8 @@
             <a href="https://www.codeschool.com/users/ouq77"
                target="_blank"
                rel="noopener noreferrer"
-               class="link js_track_link_click">
+               class="link js_track_link_click"
+               name="Codeschool">
               <i class="icon-link-ext"></i>
             </a>
           </h4>
@@ -37,7 +38,8 @@
                      title="{{course.title}}"
                      target="_blank"
                      rel="noopener noreferrer"
-                     class="js_track_link_click">
+                     class="js_track_link_click"
+                     name="{{course.title}}">
                     <img src="{{course.badge}}"
                          alt="{{course.title}}"
                          width="95px"
@@ -56,7 +58,8 @@
                      title="{{course.title}}"
                      target="_blank"
                      rel="noopener noreferrer"
-                     class="js_track_link_click">
+                     class="js_track_link_click"
+                     name="{{course.title}}">
                     <img src="{{course.badge}}" alt="{{course.title}}" width="95px">
                   </a>
                 </p>
@@ -78,7 +81,8 @@
                href="{{school.institution.url}}"
                target="_blank"
                rel="noopener noreferrer"
-               class="link js_track_link_click">
+               class="link js_track_link_click"
+               name="{{school.institution.name}}">
               <i class="icon-link-ext"></i>
             </a>
           </h4>
