--- a/src/experience/components/experience.htm
+++ b/src/experience/components/experience.htm
@@ -17,7 +17,8 @@
                href="{{job.institution.url}}"
                target="_blank"
                rel="noopener noreferrer"
-               class="link js_track_link_click">
+               class="link js_track_link_click"
+               name="{{job.institution.name}}">
               <i class="icon-link-ext"></i>
             </a>
           </h4>
