--- a/src/header/components/header.htm
+++ b/src/header/components/header.htm
@@ -6,7 +6,7 @@
       <img class="ri-loading-image" src="assets/images/loading.gif" alt="Loading..." />
       <ul class="cb-slideshow">
         <li class="js_cb-slideshow-tile" *ngFor="let imageId of imageIds">
-          <a href="#"><img src="/assets/images/instagram/{{imageId}}.jpg" alt="© Louw Swart"></a>
+          <a href="#" name="Instagram #{{imageId}}"><img src="/assets/images/instagram/{{imageId}}.jpg" alt="© Louw Swart"></a>
         </li>
       </ul>
     </div>
