--- a/src/about/components/about.htm
+++ b/src/about/components/about.htm
@@ -14,7 +14,7 @@
         <p>I have a strong <b>sense of responsibility</b> and am always driven to <b>deliver on or ahead of deadlines</b>. <b>Front-end</b> or <b>back-end</b>, I'm equally comfortable performing either or both.</p>
         <h4 class="sub-heading">Hobbies and Interests</h4>
         <p><i class="icon-camera-alt"></i>&nbsp;Photography, <i class="icon-android"></i>&nbsp;Android, <i class="icon-road"></i>&nbsp;travel and <i class="icon-flight"></i>&nbsp;plane spotting - not necessarily in that order.</p>
-        <a id="cv_request" href="#contact-form" class="btn-normal js_track_link_click">Request CV &amp; References</a>
+        <a id="cv_request" href="#contact-form" class="btn-normal js_track_link_click" name="Request CV">Request CV &amp; References</a>
       </div>
       <figure class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1 proPic">
         <img src="assets/images/louw.swart.jpg" alt="Louw Swart" class="img-circle top-margin" width="295" height="295" />
