--- a/src/contact/components/contact.htm
+++ b/src/contact/components/contact.htm
@@ -18,7 +18,7 @@
         <a href="#address"
            id="js_click_address"
            class="js_track_link_click"
-           name="Address">Brooklyn, Wellington, New Zealand</a>
+           aria-label="Address">Brooklyn, Wellington, New Zealand</a>
       </p>
       <p>
         <i class="icon-phone icon-lg"></i>&nbsp;
@@ -31,7 +31,7 @@
            rel="noopener noreferrer"
            class="js_track_link_click"
            itemscope="url"
-           name="Portfolio link">portfolio.ouq77.kiwi</a></p>
+           aria-label="Portfolio link">portfolio.ouq77.kiwi</a></p>
     </div>
     <!--contact info end-->
     <contact-form></contact-form>
