--- a/src/education/components/education.htm
+++ b/src/education/components/education.htm
@@ -17,7 +17,7 @@
                target="_blank"
                rel="noopener noreferrer"
                class="link js_track_link_click"
-               name="Codeschool">
+               aria-label="Codeschool">
               <i class="icon-link-ext"></i>
             </a>
           </h4>
@@ -39,7 +39,7 @@
                      target="_blank"
                      rel="noopener noreferrer"
                      class="js_track_link_click"
-                     name="{{course.title}}">
+                     attr.aria-label="{{course.title}}">
                     <img src="{{course.badge}}"
                          alt="{{course.title}}"
                          width="95px"
@@ -59,7 +59,7 @@
                      target="_blank"
                      rel="noopener noreferrer"
                      class="js_track_link_click"
-                     name="{{course.title}}">
+                     attr.aria-label="{{course.title}}">
                     <img src="{{course.badge}}" alt="{{course.title}}" width="95px">
                   </a>
                 </p>
@@ -82,7 +82,7 @@
                target="_blank"
                rel="noopener noreferrer"
                class="link js_track_link_click"
-               name="{{school.institution.name}}">
+               attr.aria-label="{{school.institution.name}}">
               <i class="icon-link-ext"></i>
             </a>
           </h4>
