--- a/src/experience/components/experience.htm
+++ b/src/experience/components/experience.htm
@@ -18,7 +18,7 @@
                target="_blank"
                rel="noopener noreferrer"
                class="link js_track_link_click"
-               name="{{job.institution.name}}">
+               attr.aria-label="{{job.institution.name}}">
               <i class="icon-link-ext"></i>
             </a>
           </h4>
