--- a/app/docs/components/ContactComponent.html
+++ b/app/docs/components/ContactComponent.html
@@ -736,7 +736,7 @@ export class ContactComponent {
         &lt;a href&#x3D;&quot;#address&quot;
            id&#x3D;&quot;js_click_address&quot;
            class&#x3D;&quot;js_track_link_click&quot;
-           name&#x3D;&quot;Address&quot;&gt;Brooklyn, Wellington, New Zealand&lt;/a&gt;
+           aria-label&#x3D;&quot;Address&quot;&gt;Brooklyn, Wellington, New Zealand&lt;/a&gt;
       &lt;/p&gt;
       &lt;p&gt;
         &lt;i class&#x3D;&quot;icon-phone icon-lg&quot;&gt;&lt;/i&gt;&amp;nbsp;
@@ -749,7 +749,7 @@ export class ContactComponent {
            rel&#x3D;&quot;noopener noreferrer&quot;
            class&#x3D;&quot;js_track_link_click&quot;
            itemscope&#x3D;&quot;url&quot;
-           name&#x3D;&quot;Portfolio link&quot;&gt;portfolio.ouq77.kiwi&lt;/a&gt;&lt;/p&gt;
+           aria-label&#x3D;&quot;Portfolio link&quot;&gt;portfolio.ouq77.kiwi&lt;/a&gt;&lt;/p&gt;
     &lt;/div&gt;
     &lt;!--contact info end--&gt;
     &lt;contact-form&gt;&lt;/contact-form&gt;
@@ -782,7 +782,7 @@ export class ContactComponent {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!--contact start--><section class="contact" id="contact">  <div class="container top-container">    <div class="heading">      <h2 class="js_trigger_map_marker">Get In Touch</h2>      <p>contact me to have a chat</p>    </div>  </div>  <googlemap></googlemap></section><section class="contact-details" id="contact-form">  <div class="container">    <!--contact info start-->    <div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">      <h4 class="js_trigger_map_marker">Contact details</h4>      <p>        <i class="icon-location icon-lg"></i>&nbsp;        <a href="#address"           id="js_click_address"           class="js_track_link_click"           name="Address">Brooklyn, Wellington, New Zealand</a>      </p>      <p>        <i class="icon-phone icon-lg"></i>&nbsp;        +64 22 031 3927      </p>      <p>        <i class="icon-link icon-lg"></i>&nbsp;        <a href="https://portfolio.ouq77.kiwi"           target="_blank"           rel="noopener noreferrer"           class="js_track_link_click"           itemscope="url"           name="Portfolio link">portfolio.ouq77.kiwi</a></p>    </div>    <!--contact info end-->    <contact-form></contact-form>  </div></section><!--contact end--></div>'
+        var COMPONENT_TEMPLATE = '<div><!--contact start--><section class="contact" id="contact">  <div class="container top-container">    <div class="heading">      <h2 class="js_trigger_map_marker">Get In Touch</h2>      <p>contact me to have a chat</p>    </div>  </div>  <googlemap></googlemap></section><section class="contact-details" id="contact-form">  <div class="container">    <!--contact info start-->    <div class="col-xs-12 col-sm-3 col-md-4 col-lg-4">      <h4 class="js_trigger_map_marker">Contact details</h4>      <p>        <i class="icon-location icon-lg"></i>&nbsp;        <a href="#address"           id="js_click_address"           class="js_track_link_click"           aria-label="Address">Brooklyn, Wellington, New Zealand</a>      </p>      <p>        <i class="icon-phone icon-lg"></i>&nbsp;        +64 22 031 3927      </p>      <p>        <i class="icon-link icon-lg"></i>&nbsp;        <a href="https://portfolio.ouq77.kiwi"           target="_blank"           rel="noopener noreferrer"           class="js_track_link_click"           itemscope="url"           aria-label="Portfolio link">portfolio.ouq77.kiwi</a></p>    </div>    <!--contact info end-->    <contact-form></contact-form>  </div></section><!--contact end--></div>'
     var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'ContactMapComponent', 'selector': 'googlemap'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'ContactComponent'};
