--- a/src/footer/components/footer.htm
+++ b/src/footer/components/footer.htm
@@ -24,8 +24,8 @@
       <p>Node.js server code <a href="https://github.com/feross/standard" target="_blank" rel="noopener noreferrer" aria-label="Standard style"><img class="js-standard-style" src="https://cdn.rawgit.com/feross/standard/master/badge.svg" alt="JS Standard style"></a>&nbsp;compliant</p>
       <p><i class="icon-git"></i>&nbsp;Deployed from <a href="https://github.com/ouq77/portfolio-web/tree/portfolio-web-ng2-heroku" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Github repo">this repo</a></p>
       <p><i class="icon-file-code"></i>&nbsp;Docs <a href="/docs/index.html" target="_blank" rel="noopener noreferrer" class="js_track_link_click" aria-label="Docs location">hosted here</a></p>
-      <p><a href="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2" target="_blank" rel="noopener noreferrer" title="dependencies status" aria-label="Dependencies status"><img src="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2/status.svg" alt="dependencies status"/></a></p>
-      <p><a href="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2?type=dev" target="_blank" rel="noopener noreferrer" title="devDependencies status" aria-label="Dev dependencies status"><img src="https://david-dm.org/ouq77/portfolio-web/portfolio-web-ng2/dev-status.svg" alt="devDependencies status"/></a></p>
+      <p><a href="https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm" target="_blank" rel="noopener noreferrer" title="dependencies status" aria-label="Dependencies status"><img src="https://www.bithound.io/github/ouq77/portfolio-web/badges/dependencies.svg" alt="bitHound Dependencies"></a></p>
+      <p><a href="https://www.bithound.io/github/ouq77/portfolio-web/portfolio-web-ng2/dependencies/npm" target="_blank" rel="noopener noreferrer" title="devDependencies status" aria-label="Dev dependencies status"><img src="https://www.bithound.io/github/ouq77/portfolio-web/badges/devDependencies.svg" alt="bitHound Dev Dependencies"></a></p>
     </div>
   </div>
   <div class="last-modified">
