--- a/src/contact/components/contact.scss
+++ b/src/contact/components/contact.scss
@@ -42,14 +42,14 @@
     padding-bottom: 15px;
   }
   p {
-    color: $manatee;
+    color: $mischka;
     font-size: 13px;
     line-height: 19px;
     padding-bottom: 14px;
     a {
-      color: $manatee;
+      color: $mischka;
       &:hover {
-        color: $mischka;
+        color: $snow;
         text-decoration: none;
       }
     }
