Further Lighthouse experiments

--- a/src/assets/css/layout.scss
+++ b/src/assets/css/layout.scss
@@ -141,7 +141,7 @@ h6 {
   display: block;
 }
 
-.browsehappy {
+.browsehappy, .no-script {
   background: $midnight-express;
   text-align: center;
   padding: 20px;
