--- a/src/header/components/header.htm
+++ b/src/header/components/header.htm
@@ -2,7 +2,7 @@
 <div class="banner row" id="home">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-padding">
     <!--slider start-->
-    <div id="ri-grid" class="ri-grid-loading ri-grid ri-grid-size-2">
+    <div id="ri-grid" class="ri-grid ri-grid-loading">
       <img class="ri-loading-image" src="assets/images/loading.gif" alt="Loading..." />
       <ul class="cb-slideshow">
         <li class="js_cb-slideshow-tile" *ngFor="let imageId of imageIds">
