--- a/src/assets/css/_fontello.scss
+++ b/src/assets/css/_fontello.scss
@@ -33,83 +33,83 @@
   line-height: 1em;
 }
 
-.icon-phone:before {
+.icon-phone::before {
   content: '\e800';
 }
 
-.icon-camera-alt:before {
+.icon-camera-alt::before {
   content: '\e801';
 }
 
-.icon-road:before {
+.icon-road::before {
   content: '\e802';
 }
 
-.icon-flight:before {
+.icon-flight::before {
   content: '\e803';
 }
 
-.icon-globe:before {
+.icon-globe::before {
   content: '\e804';
 }
 
-.icon-plus:before {
+.icon-plus::before {
   content: '\e805';
 }
 
-.icon-location:before {
+.icon-location::before {
   content: '\e806';
 }
 
-.icon-link:before {
+.icon-link::before {
   content: '\e807';
 }
 
-.icon-link-ext:before {
+.icon-link-ext::before {
   content: '\f08e';
 }
 
-.icon-facebook:before {
+.icon-facebook::before {
   content: '\f09a';
 }
 
-.icon-github-circled:before {
+.icon-github-circled::before {
   content: '\f09b';
 }
 
-.icon-gplus:before {
+.icon-gplus::before {
   content: '\f0d5';
 }
 
-.icon-linkedin:before {
+.icon-linkedin::before {
   content: '\f0e1';
 }
 
-.icon-code:before {
+.icon-code::before {
   content: '\f121';
 }
 
-.icon-angle-circled-right:before {
+.icon-angle-circled-right::before {
   content: '\f138';
 }
 
-.icon-instagram:before {
+.icon-instagram::before {
   content: '\f16d';
 }
 
-.icon-android:before {
+.icon-android::before {
   content: '\f17b';
 }
 
-.icon-file-code:before {
+.icon-file-code::before {
   content: '\f1c9';
 }
 
-.icon-git:before {
+.icon-git::before {
   content: '\f1d3';
 }
 
-.icon-copyright:before {
+.icon-copyright::before {
   content: '\f1f9';
 }
 
