--- a/src/education/components/education.scss
+++ b/src/education/components/education.scss
@@ -8,115 +8,113 @@
   background: $whisper;
   @include container-heading();
 
-  h2 {
-    color: $bitter-sweet;
-  }
-  p {
-    color: $manatee;
-    line-height: 18px;
-  }
-  .heading p {
-    padding-bottom: 41px;
-  }
-  h4 {
-    font-weight: 700;
-  }
-
-  .education-container {
-    width: auto;
-    background: $snow;
-    border-bottom: solid 4px $whisper-dark;
-    padding: 22px 47px 6px 47px;
-    margin-left: 15px;
-    text-align: left;
-    h4 {
-      color: $blue-zodiac;
-      padding-bottom: 3px;
+  .container {
+    h2 {
+      color: $bitter-sweet;
     }
-    h5, h6 {
-      color: $blue-zodiac;
-    }
-    .content {
+    p {
       color: $manatee;
-      line-height: 21px;
+      line-height: 18px;
+    }
+    .heading p {
+      padding-bottom: 41px;
+    }
+    h4 {
+      font-weight: 700;
+    }
 
-      .row {
-        padding-top: 20px;
-        .cs-badge {
-          min-height: 117px;
+    .education-details {
+      .right-area {
+        padding-bottom: 47px;
 
-          @include respond-to($val: max-width, $query: $screen-x2-min) {
-            img {
-              width: 85px;
-              height: 85px;
+        .arrow-part {
+          float: left;
+          width: 15px;
+          height: 50px;
+          @include bg-image($image: 'arrow-left-light.png', $y-pos: 23px);
+
+          @include respond-to {
+            float: none;
+            width: 100%;
+            height: 40px;
+            @include bg-image($image: 'arrow-top-light.png', $x-pos: 50%, $y-pos: 100%);
+          }
+        }
+
+        .education-container {
+          width: auto;
+          background: $snow;
+          border-bottom: solid 4px $whisper-dark;
+          padding: 22px 47px 6px 47px;
+          margin-left: 15px;
+          text-align: left;
+          h4 {
+            color: $blue-zodiac;
+            padding-bottom: 3px;
+          }
+          h5, h6 {
+            color: $blue-zodiac;
+          }
+          .content {
+            color: $manatee;
+            line-height: 21px;
+
+            .row {
+              padding-top: 20px;
+              .cs-badge {
+                min-height: 117px;
+
+                @include respond-to($val: max-width, $query: $screen-x2-min) {
+                  img {
+                    width: 85px;
+                    height: 85px;
+                  }
+                }
+
+                @include respond-to($val: max-width, $query: $screen-x3-min) {
+                  img {
+                    width: 75px;
+                    height: 75px;
+                  }
+                }
+
+                p {
+                  text-align: center;
+                }
+              }
             }
           }
 
-          @include respond-to($val: max-width, $query: $screen-x3-min) {
-            img {
-              width: 75px;
-              height: 75px;
-            }
-          }
-
-          p {
-            text-align: center;
+          @include respond-to {
+            margin-left: 0;
           }
         }
       }
-    }
 
-    @include respond-to {
-      margin-left: 0;
-    }
-  }
-
-  .education-details {
-    .right-area {
-      border-left: solid 1px $whisper-dark;
-      padding-bottom: 47px;
-
-      @include respond-to {
-        border-left: none;
+      &:last-child .right-area {
+        padding-bottom: 0;
       }
-    }
-    &:last-child .right-area {
-      padding-bottom: 0;
-    }
-  }
 
-  .education-year {
-    font-size: 17px;
-    color: $white;
-    background: $bitter-sweet;
-    text-align: center;
-    width: 120px;
-    height: 120px;
-    padding: 40px 0 40px 0;
-    @include border-radius(50%);
+      .education-year {
+        font-size: 17px;
+        color: $white;
+        background: $bitter-sweet;
+        text-align: center;
+        width: 120px;
+        height: 120px;
+        padding: 40px 0 40px 0;
+        @include border-radius(50%);
 
-    @include respond-to($val: min-width, $query: $screen-lg-min) {
-      width: 140px;
-      height: 140px;
-      padding-top: 50px;
-    }
+        @include respond-to($val: min-width, $query: $screen-lg-min) {
+          width: 140px;
+          height: 140px;
+          padding-top: 50px;
+        }
 
-    @include respond-to {
-      margin: 0 auto;
-    }
-  }
-
-  .arrow-part {
-    float: left;
-    width: 15px;
-    height: 50px;
-    @include bg-image($image: 'arrow-left-light.png', $y-pos: 23px);
-
-    @include respond-to {
-      float: none;
-      width: 100%;
-      height: 40px;
-      @include bg-image($image: 'arrow-top-light.png', $x-pos: 50%, $y-pos: 100%);
+        @include respond-to {
+          margin: 0 auto;
+        }
+      }
     }
   }
 }
