--- a/src/skills/components/skills.htm
+++ b/src/skills/components/skills.htm
@@ -6,8 +6,8 @@
       <p>my level of confidence</p>
     </div>
     <div class="row">
-      <div *ngFor="let skill of skills" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skills-area">
-        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 skills">
+      <div *ngFor="let skill of skills" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skill-area">
+        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 skill">
           <span class="chart skill-background" [attr.data-percent]="skill.level">
             <span class="percent"></span>
           </span>
