Add webp images

--- a/app/docs/components/SkillsComponent.html
+++ b/app/docs/components/SkillsComponent.html
@@ -9,7 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	    <link rel="stylesheet" href="../styles/style.css">
-                 <link rel="stylesheet" href="../styles/laravel.css">
+        <link rel="stylesheet" href="../styles/laravel.css">
     </head>
     <body>
 
@@ -42,7 +42,7 @@
                                          href="../overview.html" 
                                          href="../overview.html" 
                                         >
-                                        <span class="fa fa-th"></span>Overview
+                                        <span class="fa fa-fw fa-th"></span>Overview
                                     </a>
                                 </li>
                                 <li class="link">
@@ -51,7 +51,14 @@
                                 <li class="link">
                                         <a href="../license.html"
                                     >
-                                        <span class="fa fa-file-text-o"></span>LICENSE
+                                        <span class="fa fa-fw fa-file-text-o"></span>LICENSE
+                                    </a>
+                                </li>
+                                <li class="link">
+                                    <a href="../dependencies.html"
+                                        
+                                        >
+                                        <span class="fa fa-fw fa-list"></span>Dependencies
                                     </a>
                                 </li>
                         </ul>
@@ -63,7 +70,7 @@
                             <div class="menu-toggler linked" data-toggle="collapse"
                                     data-target="#xs-modules-links"
                             >
-                                <span class="fa fa-archive"></span>
+                                <span class="fa fa-fw fa-archive"></span>
                                 <span class="link-name">Modules</span>
                                 <span class="fa fa-angle-down"></span>
                             </div>
@@ -81,7 +88,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-components-links"
                             >
-                            <span class="fa fa-cogs"></span>
+                            <span class="fa fa-fw fa-cogs"></span>
                             <span>Components</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -126,7 +133,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-classes-links"
                             >
-                            <span class="fa fa-file-code-o"></span>
+                            <span class="fa fa-fw fa-file-code-o"></span>
                             <span>Classes</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -173,7 +180,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-injectables-links"
                             >
-                            <span class="fa fa-long-arrow-down"></span>
+                            <span class="fa fa-fw fa-long-arrow-down"></span>
                             <span>Injectables</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -197,7 +204,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-interfaces-links"
                             >
-                            <span class="fa fa-info"></span>
+                            <span class="fa fa-fw fa-info"></span>
                             <span>Interfaces</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -256,7 +263,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-pipes-links"
                             >
-                            <span class="fa fa-plus"></span>
+                            <span class="fa fa-fw fa-plus"></span>
                             <span>Pipes</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -285,7 +292,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-miscellaneous-links"
                             >
-                            <span class="fa fa-cubes"></span>
+                            <span class="fa fa-fw fa-cubes"></span>
                             <span>Miscellaneous</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -300,13 +307,13 @@
             
             
                     <li class="chapter">
-                        <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-tasks"></span>Documentation coverage</a>
+                        <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-fw fa-tasks"></span>Documentation coverage</a>
                     </li>
             
                     <li class="divider"></li>
                     <li class="copyright">
                             Documentation generated using <a href="https://compodoc.github.io/website/" target="_blank">
-                                        <img src="..//images/compodoc-vectorise.svg" class="img-responsive">
+                                        <img src="../images/compodoc-vectorise.svg" class="img-responsive">
                             </a>
                     </li>
             
@@ -341,7 +348,7 @@
                                                 href="../overview.html" 
                                                 href="../overview.html" 
                                                >
-                                               <span class="fa fa-th"></span>Overview
+                                               <span class="fa fa-fw fa-th"></span>Overview
                                            </a>
                                        </li>
                                        <li class="link">
@@ -350,7 +357,14 @@
                                        <li class="link">
                                                <a href="../license.html"
                                            >
-                                               <span class="fa fa-file-text-o"></span>LICENSE
+                                               <span class="fa fa-fw fa-file-text-o"></span>LICENSE
+                                           </a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../dependencies.html"
+                                               
+                                               >
+                                               <span class="fa fa-fw fa-list"></span>Dependencies
                                            </a>
                                        </li>
                                </ul>
@@ -362,7 +376,7 @@
                                    <div class="menu-toggler linked" data-toggle="collapse"
                                            data-target="#modules-links"
                                    >
-                                       <span class="fa fa-archive"></span>
+                                       <span class="fa fa-fw fa-archive"></span>
                                        <span class="link-name">Modules</span>
                                        <span class="fa fa-angle-down"></span>
                                    </div>
@@ -380,7 +394,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#components-links"
                    >
-                                   <span class="fa fa-cogs"></span>
+                                   <span class="fa fa-fw fa-cogs"></span>
                                    <span>Components</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -425,7 +439,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#classes-links"
                    >
-                                   <span class="fa fa-file-code-o"></span>
+                                   <span class="fa fa-fw fa-file-code-o"></span>
                                    <span>Classes</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -472,7 +486,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#injectables-links"
                    >
-                                   <span class="fa fa-long-arrow-down"></span>
+                                   <span class="fa fa-fw fa-long-arrow-down"></span>
                                    <span>Injectables</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -496,7 +510,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#interfaces-links"
                    >
-                                   <span class="fa fa-info"></span>
+                                   <span class="fa fa-fw fa-info"></span>
                                    <span>Interfaces</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -555,7 +569,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#pipes-links"
                    >
-                                   <span class="fa fa-plus"></span>
+                                   <span class="fa fa-fw fa-plus"></span>
                                    <span>Pipes</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -584,7 +598,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#miscellaneous-links"
                    >
-                                   <span class="fa fa-cubes"></span>
+                                   <span class="fa fa-fw fa-cubes"></span>
                                    <span>Miscellaneous</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -599,13 +613,13 @@
                    
                    
                            <li class="chapter">
-                               <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-tasks"></span>Documentation coverage</a>
+                               <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-fw fa-tasks"></span>Documentation coverage</a>
                            </li>
                    
                            <li class="divider"></li>
                            <li class="copyright">
                                    Documentation generated using <a href="https://compodoc.github.io/website/" target="_blank">
-                                               <img src="..//images/compodoc-vectorise.svg" class="img-responsive">
+                                               <img src="../images/compodoc-vectorise.svg" class="img-responsive">
                                    </a>
                            </li>
                    
@@ -757,7 +771,7 @@
                 <tbody>
                     <tr>
                         <td class="col-md-4">
-                            <code>constructor()</code>
+    <code>constructor()</code>
                         </td>
                     </tr>
                             <tr>
@@ -1128,8 +1142,8 @@ export class SkillsComponent implements OnInit {
       &lt;p&gt;my level of confidence&lt;/p&gt;
     &lt;/div&gt;
     &lt;div class&#x3D;&quot;row&quot;&gt;
-      &lt;div *ngFor&#x3D;&quot;let skill of skills&quot; class&#x3D;&quot;col-xs-12 col-sm-4 col-md-4 col-lg-4 skills-area&quot;&gt;
-        &lt;div class&#x3D;&quot;col-xs-12 col-sm-6 col-md-6 col-lg-6 skills&quot;&gt;
+      &lt;div *ngFor&#x3D;&quot;let skill of skills&quot; class&#x3D;&quot;col-xs-12 col-sm-4 col-md-4 col-lg-4 skill-area&quot;&gt;
+        &lt;div class&#x3D;&quot;col-xs-12 col-sm-6 col-md-6 col-lg-6 skill&quot;&gt;
           &lt;span class&#x3D;&quot;chart skill-background&quot; [attr.data-percent]&#x3D;&quot;skill.level&quot;&gt;
             &lt;span class&#x3D;&quot;percent&quot;&gt;&lt;/span&gt;
           &lt;/span&gt;
@@ -1167,12 +1181,13 @@ export class SkillsComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!--technical start--><section class="skills" id="skills">  <div class="container">    <div class="heading">      <h2>Technical Skills</h2>      <p>my level of confidence</p>    </div>    <div class="row">      <div *ngFor="let skill of skills" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skills-area">        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 skills">          <span class="chart skill-background" [attr.data-percent]="skill.level">            <span class="percent"></span>          </span>          <h4 class="js_trigger_skills">{{skill.name}}</h4>          <p>{{skill.content}}</p>        </div>      </div>    </div>  </div></section><!--technical end--></div>'
+        var COMPONENT_TEMPLATE = '<div><!--technical start--><section class="skills" id="skills">  <div class="container">    <div class="heading">      <h2>Technical Skills</h2>      <p>my level of confidence</p>    </div>    <div class="row">      <div *ngFor="let skill of skills" class="col-xs-12 col-sm-4 col-md-4 col-lg-4 skill-area">        <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 skill">          <span class="chart skill-background" [attr.data-percent]="skill.level">            <span class="percent"></span>          </span>          <h4 class="js_trigger_skills">{{skill.name}}</h4>          <p>{{skill.content}}</p>        </div>      </div>    </div>  </div></section><!--technical end--></div>'
     var COMPONENTS = [{'name': 'AboutComponent', 'selector': 'about'},{'name': 'AppComponent', 'selector': 'container'},{'name': 'ContactComponent', 'selector': 'contact'},{'name': 'ContactFormComponent', 'selector': 'contact-form'},{'name': 'ContactMapComponent', 'selector': 'googlemap'},{'name': 'EducationComponent', 'selector': 'education'},{'name': 'ExperienceComponent', 'selector': 'experience'},{'name': 'FooterComponent', 'selector': 'footer'},{'name': 'HeaderComponent', 'selector': 'header'},{'name': 'SkillsComponent', 'selector': 'skills'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'SkillsComponent'};
 </script>
 <script src="../js/tree.js"></script>
+
 
 
 
@@ -1216,6 +1231,7 @@ export class SkillsComponent implements OnInit {
        <script src="../js/libs/prism.js"></script>
        <script src="../js/sourceCode.js"></script>
        <script src="../js/search/search_index.js"></script>
+
 
     </body>
 </html>
