--- a/app/docs/components/ContactMapComponent.html
+++ b/app/docs/components/ContactMapComponent.html
@@ -9,7 +9,7 @@
 
         <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
 	    <link rel="stylesheet" href="../styles/style.css">
-                 <link rel="stylesheet" href="../styles/laravel.css">
+        <link rel="stylesheet" href="../styles/laravel.css">
     </head>
     <body>
 
@@ -42,7 +42,7 @@
                                          href="../overview.html" 
                                          href="../overview.html" 
                                         >
-                                        <span class="fa fa-th"></span>Overview
+                                        <span class="fa fa-fw fa-th"></span>Overview
                                     </a>
                                 </li>
                                 <li class="link">
@@ -51,7 +51,14 @@
                                 <li class="link">
                                         <a href="../license.html"
                                     >
-                                        <span class="fa fa-file-text-o"></span>LICENSE
+                                        <span class="fa fa-fw fa-file-text-o"></span>LICENSE
+                                    </a>
+                                </li>
+                                <li class="link">
+                                    <a href="../dependencies.html"
+                                        
+                                        >
+                                        <span class="fa fa-fw fa-list"></span>Dependencies
                                     </a>
                                 </li>
                         </ul>
@@ -63,7 +70,7 @@
                             <div class="menu-toggler linked" data-toggle="collapse"
                                     data-target="#xs-modules-links"
                             >
-                                <span class="fa fa-archive"></span>
+                                <span class="fa fa-fw fa-archive"></span>
                                 <span class="link-name">Modules</span>
                                 <span class="fa fa-angle-down"></span>
                             </div>
@@ -81,7 +88,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-components-links"
                             >
-                            <span class="fa fa-cogs"></span>
+                            <span class="fa fa-fw fa-cogs"></span>
                             <span>Components</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -126,7 +133,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-classes-links"
                             >
-                            <span class="fa fa-file-code-o"></span>
+                            <span class="fa fa-fw fa-file-code-o"></span>
                             <span>Classes</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -173,7 +180,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-injectables-links"
                             >
-                            <span class="fa fa-long-arrow-down"></span>
+                            <span class="fa fa-fw fa-long-arrow-down"></span>
                             <span>Injectables</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -197,7 +204,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-interfaces-links"
                             >
-                            <span class="fa fa-info"></span>
+                            <span class="fa fa-fw fa-info"></span>
                             <span>Interfaces</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -256,7 +263,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-pipes-links"
                             >
-                            <span class="fa fa-plus"></span>
+                            <span class="fa fa-fw fa-plus"></span>
                             <span>Pipes</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -285,7 +292,7 @@
                         <div class="simple menu-toggler" data-toggle="collapse"
                                 data-target="#xs-miscellaneous-links"
                             >
-                            <span class="fa fa-cubes"></span>
+                            <span class="fa fa-fw fa-cubes"></span>
                             <span>Miscellaneous</span>
                             <span class="fa fa-angle-down"></span>
                         </div>
@@ -300,13 +307,13 @@
             
             
                     <li class="chapter">
-                        <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-tasks"></span>Documentation coverage</a>
+                        <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-fw fa-tasks"></span>Documentation coverage</a>
                     </li>
             
                     <li class="divider"></li>
                     <li class="copyright">
                             Documentation generated using <a href="https://compodoc.github.io/website/" target="_blank">
-                                        <img src="..//images/compodoc-vectorise.svg" class="img-responsive">
+                                        <img src="../images/compodoc-vectorise.svg" class="img-responsive">
                             </a>
                     </li>
             
@@ -341,7 +348,7 @@
                                                 href="../overview.html" 
                                                 href="../overview.html" 
                                                >
-                                               <span class="fa fa-th"></span>Overview
+                                               <span class="fa fa-fw fa-th"></span>Overview
                                            </a>
                                        </li>
                                        <li class="link">
@@ -350,7 +357,14 @@
                                        <li class="link">
                                                <a href="../license.html"
                                            >
-                                               <span class="fa fa-file-text-o"></span>LICENSE
+                                               <span class="fa fa-fw fa-file-text-o"></span>LICENSE
+                                           </a>
+                                       </li>
+                                       <li class="link">
+                                           <a href="../dependencies.html"
+                                               
+                                               >
+                                               <span class="fa fa-fw fa-list"></span>Dependencies
                                            </a>
                                        </li>
                                </ul>
@@ -362,7 +376,7 @@
                                    <div class="menu-toggler linked" data-toggle="collapse"
                                            data-target="#modules-links"
                                    >
-                                       <span class="fa fa-archive"></span>
+                                       <span class="fa fa-fw fa-archive"></span>
                                        <span class="link-name">Modules</span>
                                        <span class="fa fa-angle-down"></span>
                                    </div>
@@ -380,7 +394,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#components-links"
                    >
-                                   <span class="fa fa-cogs"></span>
+                                   <span class="fa fa-fw fa-cogs"></span>
                                    <span>Components</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -425,7 +439,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#classes-links"
                    >
-                                   <span class="fa fa-file-code-o"></span>
+                                   <span class="fa fa-fw fa-file-code-o"></span>
                                    <span>Classes</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -472,7 +486,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#injectables-links"
                    >
-                                   <span class="fa fa-long-arrow-down"></span>
+                                   <span class="fa fa-fw fa-long-arrow-down"></span>
                                    <span>Injectables</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -496,7 +510,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#interfaces-links"
                    >
-                                   <span class="fa fa-info"></span>
+                                   <span class="fa fa-fw fa-info"></span>
                                    <span>Interfaces</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -555,7 +569,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#pipes-links"
                    >
-                                   <span class="fa fa-plus"></span>
+                                   <span class="fa fa-fw fa-plus"></span>
                                    <span>Pipes</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -584,7 +598,7 @@
                                <div class="simple menu-toggler" data-toggle="collapse"
                                        data-target="#miscellaneous-links"
                    >
-                                   <span class="fa fa-cubes"></span>
+                                   <span class="fa fa-fw fa-cubes"></span>
                                    <span>Miscellaneous</span>
                                    <span class="fa fa-angle-down"></span>
                                </div>
@@ -599,13 +613,13 @@
                    
                    
                            <li class="chapter">
-                               <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-tasks"></span>Documentation coverage</a>
+                               <a data-type="chapter-link" href="../coverage.html" ><span class="fa fa-fw fa-tasks"></span>Documentation coverage</a>
                            </li>
                    
                            <li class="divider"></li>
                            <li class="copyright">
                                    Documentation generated using <a href="https://compodoc.github.io/website/" target="_blank">
-                                               <img src="..//images/compodoc-vectorise.svg" class="img-responsive">
+                                               <img src="../images/compodoc-vectorise.svg" class="img-responsive">
                                    </a>
                            </li>
                    
@@ -801,7 +815,7 @@
                 <tbody>
                     <tr>
                         <td class="col-md-4">
-                            <code>constructor()</code>
+    <code>constructor()</code>
                         </td>
                     </tr>
                             <tr>
@@ -860,6 +874,7 @@
                                                     <td>Name</td>
                                                     <td>Type</td>
                                                     <td>Optional</td>
+                                                    <td>Default value</td>
                                                     <td>Description</td>
                                                 </tr>
                                             </thead>
@@ -870,6 +885,10 @@
                                                               <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
                                                       </td>
                                                       <td>
+                                                          no
+                                                      </td>
+                                                      <td>
+                                                          <code>750</code>
                                                       </td>
                                                       <td></td>
                                                     </tr>
@@ -1696,6 +1715,7 @@ export class ContactMapComponent implements OnInit {
 
 
 
+
                    </div><div class="search-results">
     <div class="has-results">
         <h1 class="search-results-title"><span class='search-results-count'></span> results matching "<span class='search-query'></span>"</h1>
@@ -1729,6 +1749,7 @@ export class ContactMapComponent implements OnInit {
        <script src="../js/libs/prism.js"></script>
        <script src="../js/sourceCode.js"></script>
        <script src="../js/search/search_index.js"></script>
+
 
     </body>
 </html>
