--- a/app/docs/components/ContactMapComponent.html
+++ b/app/docs/components/ContactMapComponent.html
@@ -1721,7 +1721,7 @@ export class ContactMapComponent implements OnInit {
           this._cruiseLines[index] &#x3D; new Polyline({
             geodesic: true,
             map: this.map,
-            strokeColor: &#x27;#007271&#x27;,
+            strokeColor: &#x27;#00739c&#x27;,
             strokeOpacity: 0.7,
             strokeWeight: 2,
           }));
@@ -1732,7 +1732,7 @@ export class ContactMapComponent implements OnInit {
               {
                 icon: {
                   path: &#x27;M 0, -1 0,1&#x27;,
-                  strokeColor: &#x27;#007271&#x27;,
+                  strokeColor: &#x27;#00739c&#x27;,
                   strokeOpacity: 0.7,
                   strokeWeight: 2,
                 },
